syntax = "proto3";

package prisel;
option csharp_namespace = "Prisel.Protobuf";

import "prisel/annotations.proto";

message LoginRequest {
  option (for_system_action) = {
    type : LOGIN,
    packet_type : REQUEST
  };
  string username = 1;
}

message LoginResponse {
  option (for_system_action) = {
    type : LOGIN,
    packet_type : RESPONSE
  };
  string user_id = 1;
}